# pflotran-py

./: .flake8  .gitignore  Containerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  integration.yml
batch/: 9_addnitrogen.in  create_modified_files.py  run_inhibition_test.py  run_pflotran_batch.sh
compare/: comparing_aw.ipynb
exploratory/: CCS_LT.in  SEA_SALT_PROTOCOL.md  constants.py  inputs.ipynb  linexp100years_streamlit.py  pflotran_vars.py  saltincubations.ipynb  saltincubations_t0.csv  saltincubations_t1.csv
generator/: pflotran_generator.py  pflotran_templates.py
geochem/: __init__.py  water_activity.py
reference/: Erin_UC_increasedT_original.in  Erin_UC_increasedT_updated.in  pflotran_readme.md  test9_w_nitrogen.in
sample_data/: pflotran_data.csv  test29-002.tec  test29-003.tec  test29-005.tec
sandbox/: create_custom_sandbox.ipynb  custom_sandbox_gen.py  reaction_sandbox_awinhibit.F90  reaction_sandbox_awinhibitmethyl.F90  step_by_step_instructions.md
scripts/: build_pflotran_custom.sh  patch_pflotran_sandboxes.py  run_integration.sh
tests/: conftest.py  pflotran_e2e_common.py  test_custom_docker_e2e.py  test_docker_e2e.py  test_e2e.py  test_extract_hdf5.py  test_packaging.py  test_postprocessing_regression.py  test_smoke.py  test_utils_plotting.py  test_water_activity.py
visualization/: pflotran_data.csv  requirements.txt  shared_utils.py  step1_extract.py  step1_extract_hdf5.py  step2_plot.py  step3_flux.py  step4_plotflux.py  step_orchestra.py  test29-004.tec  utils_plotting.py  vis_plotly.ipynb
(+68 files in other folders)
